<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.Design.Light.NoActionBar"
        tools:visibility="visible">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_gravity="bottom"
                android:background="#F6F6F6">

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_header_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/fjalla_one"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/headerText"
                android:textColor="#333333"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/nato_sans"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/description"
                android:textColor="#1A1A1A"
                android:textSize="16sp" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:backgroundTint="@color/white"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <RelativeLayout
                        android:id="@+id/back_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/arrow_back"
                            android:layout_width="12dp"
                            android:layout_height="21dp"
                            android:layout_marginTop="17dp"
                            android:src="@drawable/arrow_back" />

                        <TextView
                            android:id="@+id/tv_back"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="16dp"
                            android:layout_toEndOf="@+id/arrow_back"
                            android:fontFamily="@font/font_back"
                            android:text="@string/back"
                            android:textColor="#FF0000"
                            android:textSize="18sp" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tv_playlist_red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/pro_display"
                        android:text="@string/play"
                        android:textColor="#FF0000"
                        android:textSize="20sp" />
                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_video_series_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nato_sans"
                android:text="@string/_32_video_series"
                android:textSize="12sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_play"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tv_video_series_play"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                tools:listitem="@layout/list_detail" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FF0000"
        android:contentDescription="@string/playlist"
        android:src="@drawable/ic_play_arrow"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="bottom|end" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/layout_disconnect"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_internet_connection"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/internet_connection"
            android:src="@drawable/internet_connection" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_internet_connection"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/fjalla_one"
            android:text="@string/no_internet_connection"
            android:textColor="#333333"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_try_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="26dp"
            android:background="#FF0000"
            android:fontFamily="@font/nato_sans"
            android:text="@string/try_again"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>