<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.playlist.PlayListActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        tools:listitem="@layout/list_item" />

    <RelativeLayout
        android:id="@+id/layout_disconnect"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/iv_internet_connection"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/internet_connection"
            android:src="@drawable/internet_connection" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_internet_connection"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/fjalla_one"
            android:text="@string/no_internet_connection"
            android:textColor="#333333"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_try_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="26dp"
            android:background="#FF0000"
            android:fontFamily="@font/nato_sans"
            android:text="@string/try_again"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:indeterminate="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>