<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="16dp">

        <RelativeLayout
            android:id="@+id/rl_image"
            android:layout_width="140dp"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:shapeAppearance="@style/RoundCorner."
                tools:srcCompat="@tools:sample/avatars" />

            <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/down_corner"
            android:layout_width="140dp"
            android:layout_height="28dp"
            android:layout_alignBottom="@+id/imageView"
            android:layout_marginTop="60dp"
            android:scaleType="centerCrop"
            android:src="@drawable/down"
            app:shapeAppearance="@style/RoundCornerBottom." />

        <TextView
            android:id="@+id/playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/down_corner"
            android:layout_alignBottom="@+id/imageView"
            android:layout_marginEnd="30sp"
            android:layout_marginBottom="8sp"
            android:fontFamily="@font/nato_sans"
            android:text="@string/playlist"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </RelativeLayout>

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8sp"
            android:layout_toEndOf="@id/rl_image"
            android:layout_marginTop="9sp"
            android:fontFamily="@font/fjalla_one"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/headerText"
            android:textColor="#333333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_header"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8sp"
            android:layout_marginTop="4sp"
            android:layout_toEndOf="@id/rl_image"
            android:fontFamily="@font/nato_sans"
            android:text="@string/_32_video_series"
            android:textColor="#151515"
            android:textSize="12sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>